--- a/volandouy oficial/src/main/webapp/index.html
+++ b/volandouy oficial/src/main/webapp/index.html
@@ -18,7 +18,7 @@
         </div>
     </nav>
   <!-- Sección con fondo -->
-  <main class="page-bg d-flex align-items-center py-5">
+  <main class="portada d-flex align-items-center py-5">
     <div class="container">
       <!-- Tu bloque de botones centrado -->
       <div class="row justify-content-center mt-4 mt-md-5">
