Re orden y botones a tamaño

--- a/volandouy oficial/src/main/webapp/index.html
+++ b/volandouy oficial/src/main/webapp/index.html
@@ -25,9 +25,9 @@
         <div class="col-11 col-sm-10 col-md-8 col-lg-6">
           <div class="d-grid gap-3 btn-panel">
             <!-- Cambiá estos href por tus rutas reales -->
-            <a href="login.html"    class="btn btn-primary btn-xxl">Iniciar sesión</a>
-            <a href="registro.html" class="btn btn-primary btn-xxl">Registrarse</a>
-            <a href="home.html"     class="btn btn-secondary btn-xxl">Entrar como visitante</a>
+            <a href="login.html"    class="btn btn-primary">Iniciar sesión</a>
+            <a href="registro.html" class="btn btn-primary">Registrarse</a>
+            <a href="home.html"     class="btn btn-secondary">Entrar como visitante</a>
           </div>
         </div>
       </div>
