--- a/volandouy oficial/src/main/webapp/login.html
+++ b/volandouy oficial/src/main/webapp/login.html
@@ -23,7 +23,7 @@
       <div class="row justify-content-center mt-4 mt-md-5">
         <div class="col-11 col-sm-10 col-md-8 col-lg-6">
           <div class="d-grid gap-3 btn-panel">
-            <form action="home.html" method="get" novalidate>
+            <form action="home.html" method="get">
                 <div class="mb-3">
                     <label for="loginId" class="form-label">Nickname o email</label>
                     <input
@@ -32,7 +32,9 @@
                         id="loginId"
                         name="id"
                         placeholder="ej: nickname o correo@dominio.com"
-                        required>
+                        required
+                        pattern="(^[a-zA-Z0-9._-]{3,30}$)|(^\S+@\S+\.\S+$)"
+                        autocomplete="username"> 
                 </div>
 
                 <div class="mb-3">
@@ -44,7 +46,8 @@
                         name="pass"
                         placeholder="••••••"
                         minlength="3"
-                        required>
+                        required
+                        autocomplete="current-password">
                 </div>
 
                 <div class="d-grid gap-2">
@@ -61,7 +64,7 @@
 
   <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/mock-auth.js"></script>
+    <script src="assets/js/pruebas.js"></script>
 
     <footer class="py-4 bg-white border-top">
         <div class="container small text-center text-muted">
