--- a/volandouy oficial/src/main/webapp/registro.html
+++ b/volandouy oficial/src/main/webapp/registro.html
@@ -108,6 +108,13 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Footer dentro de la portada -->
+        <footer class="mt-auto py-3 bg-transparent">
+            <div class="container text-center">
+                <small class="text-white-50">© 2025 Volando.uy</small>
+            </div>
+        </footer>
     </main>
 
     <!-- Scripts -->
