--- a/volandouy oficial/src/main/webapp/index.html
+++ b/volandouy oficial/src/main/webapp/index.html
@@ -10,14 +10,14 @@
 
   <link href="assets/css/styles.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
+<body class="index-page">
+   <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
         <div class="container">
         <a class="navbar-brand fw-bold" href="#">Volando.uy</a>
         </div>
     </nav>
   <!-- Sección con fondo -->
-  <main class="portada d-flex align-items-center py-5">
+  <main class="portada d-flex align-items-start py-5">
     <div class="container">
       <!-- Tu bloque de botones centrado -->
       <div class="row justify-content-center mt-4 mt-md-5">
@@ -31,15 +31,17 @@
         </div>
       </div>
     </div>
+    <footer class="mt-auto py-3 bg-transparent">
+      <div class="container text-center">
+          <small class="text-white-50">© 2025 Volando.uy</small>
+      </div>
+    </footer>
   </main>
+ 
 
   <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <footer class="py-4 bg-white border-top">
-        <div class="container small text-center text-muted">
-        © 2025 Volando.uy
-        </div>
-    </footer>
+    
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
