--- a/volandouy oficial/src/main/webapp/login.html
+++ b/volandouy oficial/src/main/webapp/login.html
@@ -10,10 +10,10 @@
 
   <link href="assets/css/styles.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
+<body class="index-page">
+    <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
         <div class="container">
-        <a class="navbar-brand fw-bold" href="login.html">Volando.uy</a>
+        <a class="navbar-brand fw-bold" href="#">Volando.uy</a>
         </div>
     </nav>
   <!-- Sección con fondo -->
@@ -60,17 +60,17 @@
         </div>
       </div>
     </div>
+        <footer class="mt-auto py-3 bg-transparent">
+      <div class="container text-center">
+          <small class="text-white-50">© 2025 Volando.uy</small>
+      </div>
+    </footer>
   </main>
 
   <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/pruebas.js"></script>
 
-    <footer class="py-4 bg-white border-top">
-        <div class="container small text-center text-muted">
-        © 2025 Volando.uy
-        </div>
-    </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
