--- a/volandouy oficial/src/main/webapp/login.html
+++ b/volandouy oficial/src/main/webapp/login.html
@@ -25,12 +25,12 @@
           <div class="d-grid gap-3 btn-panel">
             <form action="home.html" method="get">
                 <div class="mb-3">
-                    <label for="loginId" class="form-label">Nickname o email</label>
+                    <label for="loginId" class="form-label label-login">Nickname o email</label>
                     <input type="text" class="form-control" id="loginId" name="id" placeholder="ej: nickname o correo@dominio.com" required pattern="(^[a-zA-Z0-9._-]{3,30}$)|(^\S+@\S+\.\S+$)" autocomplete="username"> 
                 </div>
 
                 <div class="mb-3">
-                    <label for="loginPass" class="form-label">Contraseña</label>
+                    <label for="loginPass" class="form-label label-login">Contraseña</label>
                     <input type="password" class="form-control" id="loginPass" name="pass" placeholder="••••••" minlength="3" required autocomplete="current-password"> 
                 </div>
 
