--- a/volandouy oficial/src/main/webapp/home.html
+++ b/volandouy oficial/src/main/webapp/home.html
@@ -1,55 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/styles.css" rel="stylesheet">
-    <title>Home - Volando.uy</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home - Volando.uy</title>
+
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Tu CSS -->
+  <link href="assets/css/styles.css" rel="stylesheet">
+
+  <style>
+    /* --- Ajustes rápidos para navbar fija + sidebar tipo docs --- */
+    body { padding-top: 56px; } /* alto aprox navbar fixed-top */
+    .sidebar { 
+      top: 56px;                 /* que no quede debajo de la navbar */
+      max-height: calc(100vh - 56px);
+      overflow: auto;
+    }
+    .list-group-item.active {
+      background-color: #0d6efd;
+      border-color: #0d6efd;
+      color: #fff;
+    }
+  </style>
 </head>
-
 <body>
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-        <div class="container d-flex align-items-center">
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-dark bg-dark fixed-top">
+    <div class="container d-flex align-items-center">
+      <!-- Marca -->
+      <a class="navbar-brand fw-bold me-3" href="home.html">Volando.uy</a>
 
-            <!-- Izquierda: marca -->
-            <a class="navbar-brand fw-bold me-3" href="home.html">Volando.uy</a>
+      <!-- Botón menú (solo mobile) -->
+      <button class="btn btn-outline-light d-lg-none me-2"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#sidebarOffcanvas"
+              aria-controls="sidebarOffcanvas">
+        Menú
+      </button>
 
-            <!-- Centro: buscador -->
-            <div class="flex-grow-1 d-flex justify-content-center">
-            <form class="search-bar" role="search">
-                <div class="input-group input-group-sm">
-                <span class="input-group-text">Buscar</span>
-                <input class="form-control form-control-sm" type="search"
-                        placeholder="Vuelos, rutas..." aria-label="Buscar">
-                </div>
-            </form>
-            </div>
-
-            <!-- Derecha: auth -->
-            <div id="authArea" class="ms-3"></div>
-
-        </div>
-    </nav>
-
-    
-    
-    <main class="container mt-5">
-        <h1>Bienvenid@ a Volando.uy</h1>
-        <div>
-            <h2>Registro</h2>
-            <a href="">Registrarme</a>
-        </div>
-    </main>
-
-    <footer class="mt-auto py-3 bg-transparent">
-      <div class="container text-center">
-          <small class="text-white-50">© 2025 Volando.uy</small>
+      <!-- Buscador centrado -->
+      <div class="flex-grow-1 d-none d-md-flex justify-content-center">
+        <form class="search-bar" role="search">
+          <div class="input-group input-group-sm" style="max-width: 420px;">
+            <span class="input-group-text">Buscar</span>
+            <input class="form-control form-control-sm" type="search" placeholder="Vuelos, rutas..." aria-label="Buscar">
+          </div>
+        </form>
       </div>
-    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- Acciones auth (mock) -->
+      <div class="ms-3 d-none d-md-block">
+        <a href="login.html" class="btn btn-sm btn-outline-light me-2">Iniciar sesión</a>
+        <a href="registro.html" class="btn btn-sm btn-primary">Registrarse</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- LAYOUT: SIDEBAR + CONTENIDO -->
+  <div class="container-fluid">
+    <div class="row">
+      <!-- SIDEBAR (visible en ≥ lg) -->
+      <aside class="col-lg-3 col-xl-2 d-none d-lg-block border-end bg-body-tertiary">
+        <nav class="sidebar position-sticky sticky-top">
+          <div class="p-3">
+            <h6 class="text-uppercase text-muted mb-3">Casos de uso</h6>
+            <div class="list-group list-group-flush">
+              <a href="home.html" class="list-group-item list-group-item-action active">Inicio</a>
+              <a href="usuarios-consulta.html" class="list-group-item list-group-item-action">Consulta de Usuario</a>
+              <a href="rutas-alta.html" class="list-group-item list-group-item-action">Alta de Ruta</a>
+              <a href="rutas-consulta.html" class="list-group-item list-group-item-action">Consulta de Rutas</a>
+              <a href="vuelos-alta.html" class="list-group-item list-group-item-action">Alta de Vuelo</a>
+              <a href="vuelos-consulta.html" class="list-group-item list-group-item-action">Consulta de Vuelos</a>
+              <a href="paquetes.html" class="list-group-item list-group-item-action">Paquetes</a>
+              <a href="reservas.html" class="list-group-item list-group-item-action">Reservas</a>
+            </div>
+          </div>
+        </nav>
+      </aside>
+
+      <!-- CONTENIDO -->
+      <main class="col-12 col-lg-9 col-xl-10 py-4">
+        <div class="container">
+          <h1 class="display-6 mb-3">Bienvenid@ a Volando.uy</h1>
+          <p class="lead">Este es el panel principal. Usá el menú de la izquierda para navegar los casos de uso.</p>
+
+          <section class="mt-4">
+            <h2 class="h5">Registro</h2>
+            <p>¿Aún no tenés cuenta? Podés crearla ahora mismo.</p>
+            <a href="registro.html" class="btn btn-primary">Registrarme</a>
+          </section>
+        </div>
+      </main>
+    </div>
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="mt-auto py-3 bg-transparent">
+    <div class="container text-center">
+      <small class="text-muted">© 2025 Volando.uy</small>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
