--- a/volandouy oficial/src/main/webapp/home.html
+++ b/volandouy oficial/src/main/webapp/home.html
@@ -69,7 +69,9 @@
             <h6 class="text-uppercase text-muted mb-3">Casos de uso</h6>
             <div class="list-group list-group-flush">
               <a href="home.html" class="list-group-item list-group-item-action active">Inicio</a>
-              <a href="usuarios-consulta.html" class="list-group-item list-group-item-action">Consulta de Usuario</a>
+              <a href="registro.html" class="list-group-item list-group-item-action">Alta de Usuario</a>
+              <a href="login.html" class="list-group-item list-group-item-action">Iniciar sesión</a>
+              <a href="ConsultaUsuario.html" class="list-group-item list-group-item-action">Consulta de Usuario</a>
               <a href="rutas-alta.html" class="list-group-item list-group-item-action">Alta de Ruta</a>
               <a href="rutas-consulta.html" class="list-group-item list-group-item-action">Consulta de Rutas</a>
               <a href="vuelos-alta.html" class="list-group-item list-group-item-action">Alta de Vuelo</a>
@@ -94,6 +96,28 @@
           </section>
         </div>
       </main>
+    </div>
+  </div>
+
+  <!-- OFFCANVAS (sidebar para mobile) -->
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebarOffcanvas" aria-labelledby="sidebarOffcanvasLabel">
+    <div class="offcanvas-header">
+      <h5 id="sidebarOffcanvasLabel" class="mb-0">Casos de uso</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
+    </div>
+    <div class="offcanvas-body p-0">
+      <div class="list-group list-group-flush">
+        <a href="home.html" class="list-group-item list-group-item-action active" data-bs-dismiss="offcanvas">Inicio</a>
+        <a href="registro.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Alta de Usuario</a>
+        <a href="login.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Iniciar sesión</a>
+        <a href="ConsultaUsuario.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Consulta de Usuario</a>
+        <a href="rutas-alta.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Alta de Ruta</a>
+        <a href="rutas-consulta.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Consulta de Rutas</a>
+        <a href="vuelos-alta.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Alta de Vuelo</a>
+        <a href="vuelos-consulta.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Consulta de Vuelos</a>
+        <a href="paquetes.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Paquetes</a>
+        <a href="reservas.html" class="list-group-item list-group-item-action" data-bs-dismiss="offcanvas">Reservas</a>
+      </div>
     </div>
   </div>
 
