--- a/volandouy oficial/src/main/webapp/home.html
+++ b/volandouy oficial/src/main/webapp/home.html
@@ -14,10 +14,9 @@
 </head>
 <body class="home-page">
   <!-- NAVBAR -->
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class="container d-flex align-items-center">
-      <!-- Marca -->
-      <a class="navbar-brand fw-bold me-3" href="home.html">Volando.uy</a>
+    <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
+        <div class="container">
+        <a class="navbar-brand fw-bold" href="#">Volando.uy</a>
 
       <!-- Botón menú (solo mobile) -->
       <button class="btn btn-outline-light d-lg-none me-2"
