--- a/volandouy oficial/src/main/webapp/registro.html
+++ b/volandouy oficial/src/main/webapp/registro.html
@@ -102,7 +102,7 @@
                             
                             <div class="d-grid">
                                 <button type="submit" class="btn btn-primary">Registrarse</button>
-                                <a href="index.html" class="btn btn-outline-secondary btn-cancelar-registro">Cancelar</a>
+                                <a href="index.html" class="btn btn-outline-secondary mt-2">Cancelar</a>
                             </div>
                         </form>
                     </div>    
