--- a/volandouy oficial/src/main/webapp/front/registroVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/registroVuelo.html
@@ -13,7 +13,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">Volando.uy</a>
+            <a class="navbar-brand fw-bold" href="../home.html">Volando.uy</a>
         </div>
     </nav>
 
