--- a/volandouy oficial/src/main/webapp/front/consultaRutasVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/consultaRutasVuelo.html
@@ -32,7 +32,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container d-flex align-items-center">
-      <a class="navbar-brand fw-bold me-3" href="home.html">Volando.uy</a>
+      <a class="navbar-brand fw-bold me-3" href="../home.html">Volando.uy</a>
 
       <button class="btn btn-outline-light d-lg-none me-2"
               type="button"
@@ -79,8 +79,8 @@
             <h6 class="text-uppercase text-muted my-3">Consultas</h6>
             <div class="list-group list-group-flush">
 
-              <a href="./consultaUsuario.html" class="list-group-item list-group-item-action active">Usuario</a>
-              <a href="./consultaRutasVuelo.html" class="list-group-item list-group-item-action">Ruta de Vuelo</a>
+              <a href="./consultaUsuario.html" class="list-group-item list-group-item-action">Usuario</a>
+              <a href="./consultaRutasVuelo.html" class="list-group-item list-group-item-action active">Ruta de Vuelo</a>
               <a href="./consultaVuelo.html" class="list-group-item list-group-item-action">Vuelo</a>
               <a href="./consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
             </div>
@@ -105,7 +105,7 @@
         <div class="container">
         
                   <!-- Título -->
-        <h1 class="text-center mb-4">CONSULTA DE RUTA DE VUELO</h1>
+        <h1 class="text-center mb-4">Consulta de Ruta de Vuelo</h1>
 
         <!-- Filtros -->
         <section class="mb-3">
