--- a/volandouy oficial/src/main/webapp/front/consultaUsuario.html
+++ b/volandouy oficial/src/main/webapp/front/consultaUsuario.html
@@ -32,7 +32,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container d-flex align-items-center">
-      <a class="navbar-brand fw-bold me-3" href="home.html">Volando.uy</a>
+      <a class="navbar-brand fw-bold me-3" href="../home.html">Volando.uy</a>
 
       <button class="btn btn-outline-light d-lg-none me-2"
               type="button"
@@ -102,7 +102,7 @@
       <main class="col-12 col-lg-9 col-xl-10 py-4">
         <div class="container">
           <!-- 👇 clase específica para el título -->
-          <h1 class="text-center mb-4 titulo-consulta">CONSULTA DE USUARIO</h1>
+          <h1 class="text-center mb-4 titulo-consulta">Consulta de Usuario</h1>
                     <!-- Filtros -->
           <section class="mb-3">
             <form id="userFilters" class="row g-2 align-items-end">
