--- a/volandouy oficial/src/main/webapp/front/registroVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/registroVuelo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,20 +26,20 @@
           <div class="p-3">
             <h6 class="text-uppercase text-muted mb-3">Registros</h6>
             <div class="list-group list-group-flush">
-              <a href="registroCategoria.html" class="list-group-item list-group-item-action active">Registrar Categoria</a>
+              <a href="registroCategoria.html" class="list-group-item list-group-item-action">Registrar Categoria</a>
               <a href="registroCiudad.html" class="list-group-item list-group-item-action">Registrar Ciudad</a>
-              <a href="registroVuelo.html" class="list-group-item list-group-item-action">Registrar Vuelo</a>
+              <a href="registroVuelo.html" class="list-group-item list-group-item-action active">Registrar Vuelo</a>
               <a href="registroRutaVuelo.html" class="list-group-item list-group-item-action">Registrar Ruta de Vuelo</a>
               <a href="registroPaqRutasVuelo.html" class="list-group-item list-group-item-action">Crear Paquetes de Rutas de Vuelo</a>
               <a href="registroRutasVueloenPaquete.html" class="list-group-item list-group-item-action">Registrar Rutas de Vuelo en Paquete</a>
-            </div>
+            </div><br>
             <h6 class="text-uppercase text-muted mb-3">Consultas</h6>
             <div class="list-group list-group-flush">
               <a href="consultaUsuario.html" class="list-group-item list-group-item-action">Usuario</a>
               <a href="consultaRutasVuelo.html" class="list-group-item list-group-item-action">Ruta de Vuelo</a>
               <a href="consultaVuelo.html" class="list-group-item list-group-item-action">Vuelo</a>
               <a href="consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
-            </div>
+            </div><br>
             <h6 class="text-uppercase text-muted mb-3">Modificaciones</h6>
             <div class="list-group list-group-flush mb-4">
               <a href="modificarUsuario.html" class="list-group-item list-group-item-action">Modificar Datos de Usuario</a>
