--- a/volandouy oficial/src/main/webapp/home.html
+++ b/volandouy oficial/src/main/webapp/home.html
@@ -38,10 +38,25 @@
       </div>
 
       <!-- Acciones auth (mock) -->
-      <div class="ms-3 d-none d-md-block">
-        <a href="login.html" class="btn btn-sm btn-outline-light me-2">Iniciar sesión</a>
-        <a href="registro.html" class="btn btn-sm btn-primary">Registrarse</a>
-      </div>
+      <div id="authArea" class="d-flex align-items-center gap-2">
+        <!-- Estado: invitado -->
+        <div id="guestArea" class="d-flex align-items-center gap-2">
+            <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#loginModal">Iniciar sesión</button>
+            <a class="btn btn-warning btn-sm" href="registro.html" role="button">Registrarse</a>
+        </div>
+        <!-- Estado: logueado -->
+        <div id="userArea" class="d-none align-items-center gap-2">
+            <span class="text-light small">Hola, <strong id="nicknameSpan">usuario</strong></span>
+            <div class="btn-group">
+                <button class="btn btn-outline-light btn-sm dropdown-toggle" data-bs-toggle="dropdown">Cuenta</button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li><button class="dropdown-item text-danger" id="btnLogout">Cerrar sesión</button></li>
+                    </ul>
+                </div>
+        </div>
+        </div>
     </div>
   </nav>
 
@@ -54,20 +69,20 @@
           <div class="p-3">
             <h6 class="text-uppercase text-muted mb-3">Registros</h6>
             <div class="list-group list-group-flush">
-              <a href="front/registroCategoria.html" class="list-group-item list-group-item-action active">Registrar Categoria</a>
+              <a href="front/registroCategoria.html" class="list-group-item list-group-item-action">Registrar Categoria</a>
               <a href="front/registroCiudad.html" class="list-group-item list-group-item-action">Registrar Ciudad</a>
               <a href="front/registroVuelo.html" class="list-group-item list-group-item-action">Registrar Vuelo</a>
               <a href="front/registroRutaVuelo.html" class="list-group-item list-group-item-action">Registrar Ruta de Vuelo</a>
               <a href="front/registroPaqRutasVuelo.html" class="list-group-item list-group-item-action">Crear Paquetes de Rutas de Vuelo</a>
               <a href="front/registroRutasVueloenPaquete.html" class="list-group-item list-group-item-action">Registrar Rutas de Vuelo en Paquete</a>
-            </div>
+            </div><br>
             <h6 class="text-uppercase text-muted mb-3">Consultas</h6>
             <div class="list-group list-group-flush">
               <a href="front/consultaUsuario.html" class="list-group-item list-group-item-action">Usuario</a>
               <a href="front/consultaRutasVuelo.html" class="list-group-item list-group-item-action">Ruta de Vuelo</a>
               <a href="front/consultaVuelo.html" class="list-group-item list-group-item-action">Vuelo</a>
               <a href="front/consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
-            </div>
+            </div><br>
             <h6 class="text-uppercase text-muted mb-3">Modificaciones</h6>
             <div class="list-group list-group-flush mb-4">
               <a href="front/modificarUsuario.html" class="list-group-item list-group-item-action">Modificar Datos de Usuario</a>
@@ -128,5 +143,35 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/consulta-usuario.js"></script>
+  <script src="assets/js/auth.js"></script>
+
+  <div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+      <form class="modal-content" id="loginForm">
+      <div class="modal-header">
+          <h5 class="modal-title">Iniciar sesión</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+          <div class="mb-3">
+          <label class="form-label">Nickname</label>
+          <input name="nickname" class="form-control" placeholder="p. ej., maria23" required>
+          </div>
+          <div class="mb-2">
+          <label class="form-label">Contraseña</label>
+          <input name="pass" type="password" class="form-control" placeholder="1235" required>
+          </div>
+          <div id="loginError" class="text-danger small d-none">Credenciales inválidas.</div>
+      </div>
+      <div class="modal-footer">
+          <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Cancelar</button>
+          <button class="btn btn-primary" type="submit">Entrar</button>
+      </div>
+      </form>
+  </div>
+  </div>
 </body>
+<!-- Modal Login (Front-only, mock) -->
+
 </html>
