--- a/volandouy oficial/src/main/webapp/login.html
+++ b/volandouy oficial/src/main/webapp/login.html
@@ -13,7 +13,7 @@
 <body class="index-page">
     <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
         <div class="container">
-        <a class="navbar-brand fw-bold" href="#">Volando.uy</a>
+        <a class="navbar-brand fw-bold" href="home.html">Volando.uy</a>
         </div>
     </nav>
   <!-- Sección con fondo -->
