--- a/volandouy oficial/src/main/webapp/registro.html
+++ b/volandouy oficial/src/main/webapp/registro.html
@@ -10,7 +10,7 @@
     <body class="registro-page">
     <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
         <div class="container">
-        <a class="navbar-brand fw-bold" href="#">Volando.uy</a>
+        <a class="navbar-brand fw-bold" href="home.html">Volando.uy</a>
         </div>
     </nav>
     <main class="portada d-flex align-items-start py-5">
