--- a/volandouy oficial/src/main/webapp/home.html
+++ b/volandouy oficial/src/main/webapp/home.html
@@ -50,7 +50,7 @@
             <div class="btn-group">
                 <button class="btn btn-outline-light btn-sm dropdown-toggle" data-bs-toggle="dropdown">Cuenta</button>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+                    <li><a class="dropdown-item" href="front/perfil.html">Mi perfil</a></li>
                     <li><hr class="dropdown-divider" /></li>
                     <li><button class="dropdown-item text-danger" id="btnLogout">Cerrar sesión</button></li>
                     </ul>
