fix para cerrar sesion desde el perfil

--- a/volandouy oficial/src/main/webapp/front/perfil.html
+++ b/volandouy oficial/src/main/webapp/front/perfil.html
@@ -38,7 +38,7 @@
         <!-- Estado: invitado -->
         <div id="guestArea" class="d-flex align-items-center gap-2">
             <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#loginModal">Iniciar sesión</button>
-            <a class="btn btn-warning btn-sm" href="registro.html" role="button">Registrarse</a>
+            <a class="btn btn-warning btn-sm" href="../registro.html" role="button">Registrarse</a>
         </div>
         <!-- Estado: logueado -->
         <div id="userArea" class="d-none align-items-center gap-2">
@@ -52,9 +52,9 @@
             <div class="btn-group">
                 <button class="btn btn-outline-light btn-sm dropdown-toggle" data-bs-toggle="dropdown">Cuenta</button>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="front/perfil.html">Mi perfil</a></li>
+                    <li><a class="dropdown-item" href="perfil.html">Mi perfil</a></li>
                     <li><hr class="dropdown-divider" /></li>
-                    <li><button class="dropdown-item text-danger" id="btnLogout">Cerrar sesión</button></li>
+                    <li><a href="../index.html" class = "dropdown-item text-danger" id="btnLogout">Cerrar sesión</a></li>
                     </ul>
                 </div>
         </div>
