Cuando "registras" te lleva al login

--- a/volandouy oficial/src/main/webapp/registro.html
+++ b/volandouy oficial/src/main/webapp/registro.html
@@ -19,7 +19,7 @@
                 <div class="col-11 col-sm-10 col-md-8 col-lg-6">
                     <div class="card p-4">
                         <h2 class="mb-4 text-center">Registro</h2>
-                        <form class="registro-form">
+                        <form class="registro-form" action="login.html"> <!-- Esto hay que cambiarlo poniendo un id y haciendo un script que primero valide los campos -->
                             <div class="mb-3">
                                 <label for="userType" class="form-label">Tipo de Usuario</label>
                                 <select class="form-control" id="userType" required onchange="toggleFields()">
