--- a/volandouy oficial/src/main/webapp/front/perfil.html
+++ b/volandouy oficial/src/main/webapp/front/perfil.html
@@ -14,14 +14,6 @@
         <div class="container">
         <a class="navbar-brand fw-bold" href="../home.html">Volando.uy</a>
 
-        <!-- Botón menú (solo mobile) -->
-        <button class="btn btn-outline-light d-lg-none me-2"
-                type="button"
-                data-bs-toggle="offcanvas"
-                data-bs-target="#sidebarOffcanvas"
-                aria-controls="sidebarOffcanvas">
-        Menú
-        </button>
 
         <!-- Buscador centrado -->
         <div class="flex-grow-1 d-none d-md-flex justify-content-center">
@@ -81,6 +73,102 @@
                     <h1 id="profileName" class="display-5">Cargando...</h1>
                     <p id="profileEmail" class="text-muted">Cargando...</p>
                     <img id="profileAvatar" class="avatar-lg rounded-circle" src="" alt="Avatar del usuario">
+                        <!-- DETALLE + EDICIÓN -->
+                    <section class="container p-4">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <h2 class="h5 mb-0">Datos personales</h2>
+                            <button id="btnEditProfile" class="btn btn-outline-primary btn-sm">Editar</button>
+                        </div>
+
+                        <!-- Vista (solo lectura) -->
+                        <div id="profileView">
+                            <dl class="row mb-0">
+                            <dt class="col-sm-3">Nombre</dt>
+                            <dd class="col-sm-9" id="viewNombre">—</dd>
+
+                            <dt class="col-sm-3">Apellido</dt>
+                            <dd class="col-sm-9" id="viewApellido">—</dd>
+
+                            <dt class="col-sm-3">Nickname</dt>
+                            <dd class="col-sm-9" id="viewNickname">—</dd>
+
+                            <dt class="col-sm-3">Email</dt>
+                            <dd class="col-sm-9" id="viewEmail">—</dd>
+
+                            <dt class="col-sm-3">Rol</dt>
+                            <dd class="col-sm-9" id="viewRol">—</dd>
+                            </dl>
+                        </div>
+
+                        <!-- Formulario de edición -->
+                        <form id="profileForm" class="row g-3 d-none">
+                            <div class="col-md-6">
+                            <label class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="inpNombre" required>
+                            </div>
+                            <div class="col-md-6">
+                            <label class="form-label">Apellido</label>
+                            <input type="text" class="form-control" id="inpApellido">
+                            </div>
+
+                            <!-- Campos no editables-->
+                            <div class="col-md-6">
+                            <label class="form-label">Nickname (no editable)</label>
+                            <input type="text" class="form-control" id="inpNickname" disabled>
+                            </div>
+                            <div class="col-md-6">
+                            <label class="form-label">Email (no editable)</label>
+                            <input type="email" class="form-control" id="inpEmail" disabled>
+                            </div>
+
+                            <!-- Imagen  -->
+                            <div class="col-12">
+                                <label class="form-label mb-2">Imagen de perfil</label>
+
+                                <div class="d-flex gap-3 align-items-center">
+                                    <img id="avatarPreview" class="rounded-circle object-fit-cover" width="72" height="72" alt="">
+                                    <div class="d-flex flex-column gap-2">
+                                        <input type="file" accept="image/*" id="avatarFile" class="form-control form-control-sm" />
+                                        <div class="form-text">
+                                        Se guarda localmente (demo sin backend). Podés quitar la foto con el botón.
+                                        </div>
+                                    </div>
+                                    <button type="button" id="btnClearPhoto" class="btn btn-outline-danger btn-sm">Quitar foto</button>
+                                </div>
+                            </div>
+
+                            <!-- Cambio de contraseña -->
+                            <div class="col-12">
+                            <h3 class="h6 mb-2">Cambiar contraseña (mock Parte 1)</h3>
+                            </div>
+                            <div class="col-md-4">
+                            <label class="form-label">Contraseña actual</label>
+                            <input type="password" class="form-control" id="pwdCurrent" autocomplete="current-password">
+                            </div>
+                            <div class="col-md-4">
+                            <label class="form-label">Nueva contraseña</label>
+                            <input type="password" class="form-control" id="pwdNew" autocomplete="new-password">
+                            </div>
+                            <div class="col-md-4">
+                            <label class="form-label">Repetir nueva contraseña</label>
+                            <input type="password" class="form-control" id="pwdNew2" autocomplete="new-password">
+                            </div>
+                            <div class="col-12">
+                            <div class="form-text">
+                                * En Parte 1 la contraseña se guarda como “override” local. En Parte 2 (backend) irá a la BD.
+                            </div>
+                            </div>
+
+                            <div class="col-12 d-flex gap-2">
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                            <button type="button" id="btnCancelEdit" class="btn btn-outline-secondary">Cancelar</button>
+                            </div>
+                        </form>
+                        </div>
+                    </div>
+                    </section>
                 </div>
             </main>
         <!-- FOOTER -->
@@ -91,5 +179,33 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/auth.js"></script>
+    <script src="../assets/js/perfil-edit.js"></script>
+    <script src="../assets/js/consulta-usuario.js"></script>
+
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <form class="modal-content" id="loginForm">
+            <div class="modal-header">
+                <h5 class="modal-title">Iniciar sesión</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                <label class="form-label">Nickname</label>
+                <input name="nickname" class="form-control" placeholder="p. ej., maria23" required>
+                </div>
+                <div class="mb-2">
+                <label class="form-label">Contraseña</label>
+                <input name="pass" type="password" class="form-control" placeholder="1235" required>
+                </div>
+                <div id="loginError" class="text-danger small d-none">Credenciales inválidas.</div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Cancelar</button>
+                <button class="btn btn-primary" type="submit">Entrar</button>
+            </div>
+            </form>
+        </div>
+  </div>
 </body>
 </html>
