--- a/volandouy oficial/src/main/webapp/home.html
+++ b/volandouy oficial/src/main/webapp/home.html
@@ -99,17 +99,90 @@
       <main class="col-12 col-lg-9 col-xl-10 py-4">
         <div class="container">
           <h1>Bienvenid@ a Volando.uy</h1>
-          <p class="lead">Este es el panel principal. Usá el menú de la izquierda para navegar los casos de uso.</p>
+
+          <!--imagen de volando en la izquierda -->
+          <div class="text-center">
+            <img src="assets/img/ChatGPT Image 24 sept 2025, 10_28_06 a.m..png" alt="Avión volando" class="img-fluid my-4" style="max-height: 120px;">
+          
 
           <section class="mt-4">
-            <h2 class="h5">Registro</h2>
-            <p>¿Aún no tenés cuenta? Podés crearla ahora mismo.</p>
-            <a href="registro.html" class="btn btn-primary">Registrarme</a>
-          </section>
+          
+
+          <div class="row justify-content-center g-3">
+            <!-- Card 1 -->
+            <div class="col-12 col-md-10 col-lg-8">
+              <div class="card h-100 shadow-sm">
+                <div class="row g-0 align-items-center">
+                  <div class="col-12 col-sm-4">
+                    <img src="assets/img/madrid.jpg" alt="Madrid" class="img-fluid card-img-top rounded-start">
+                  </div>
+                  <div class="col-12 col-sm-8">
+                    <div class="card-body">
+                      <h3 class="h6 mb-2">Montevideo — Madrid <small class="text-muted">(IB6012)</small></h3>
+                      <p class="mb-2">
+                         <strong>Aerolínea:</strong> Iberia<br>
+                         <strong>Duración:</strong> ~12 h<br>
+                         Comidas, bebidas y entretenimiento.
+                      </p>
+                      <a href="#" class="btn btn-sm btn-primary">Ver detalles</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-12 col-md-10 col-lg-8">
+              <div class="card h-100 shadow-sm">
+                <div class="row g-0 align-items-center">
+                  <div class="col-12 col-sm-4">
+                    <img src="assets/img/nyc.jpg" alt="Nueva York" class="img-fluid card-img-top rounded-start">
+                  </div>
+                  <div class="col-12 col-sm-8">
+                    <div class="card-body">
+                      <h3 class="h6 mb-2">Ciudad de Panamá — Nueva York <small class="text-muted">(CM804)</small></h3>
+                      <p class="mb-2">
+                         <strong>Aerolínea:</strong> Copa Airlines<br>
+                         <strong>Duración:</strong> 5 h 30 m<br>
+                         Servicio a bordo completo.
+                      </p>
+                      <a href="#" class="btn btn-sm btn-primary">Ver detalles</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-12 col-md-10 col-lg-8">
+              <div class="card h-100 shadow-sm">
+                <div class="row g-0 align-items-center">
+                  <div class="col-12 col-sm-4">
+                    <img src="assets/img/rio.jpg" alt="Río de Janeiro" class="img-fluid card-img-top rounded-start">
+                  </div>
+                  <div class="col-12 col-sm-8">
+                    <div class="card-body">
+                      <h3 class="h6 mb-2">Montevideo — Río de Janeiro <small class="text-muted">(ZL1502)</small></h3>
+                      <p class="mb-2">
+                         <strong>Aerolínea:</strong> ZulyFly<br>
+                         <strong>Duración:</strong> 2 h 30 m (directo)<br>
+                         Servicio de cortesía incluido.
+                      </p>
+                      <a href="#" class="btn btn-sm btn-primary">Ver detalles</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </section>
+
         </div>
       </main>
     </div>
   </div>
+  
 
   <!-- OFFCANVAS (sidebar para mobile) -->
   <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebarOffcanvas" aria-labelledby="sidebarOffcanvasLabel">
