--- a/volandouy oficial/src/main/webapp/front/consultaRutasVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/consultaRutasVuelo.html
@@ -32,8 +32,46 @@
   <!-- NAVBAR -->
     <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="../home.html">Volando.uy</a>
+        <a class="navbar-brand fw-bold" href="../home.html">Volando.uy</a>
+
+
+        <!-- Buscador centrado -->
+        <div class="flex-grow-1 d-none d-md-flex justify-content-center">
+        <form class="search-bar" role="search">
+            <div class="input-group input-group-sm" style="max-width: 420px;">
+            <span class="input-group-text">Buscar</span>
+            <input class="form-control form-control-sm" type="search" placeholder="Vuelos, rutas..." aria-label="Buscar">
+            </div>
+        </form>
         </div>
+
+        <!-- Acciones auth (mock) -->
+        <div id="authArea" class="d-flex align-items-center gap-2">
+        <!-- Estado: invitado -->
+        <div id="guestArea" class="d-flex align-items-center gap-2">
+          <a class="btn btn-outline-light btn-sm" href="../login.html">Iniciar sesión</a>
+          <a class="btn btn-warning btn-sm" href="../registro.html" role="button">Registrarse</a>
+        </div>
+        <!-- Estado: logueado -->
+        <div id="userArea" class="d-none align-items-center gap-2">
+            <div class="auth-user text-light small">
+                <span id="avatarWrapper" class="d-flex align-items-center">
+                    <img id="avatarImg" src="" alt="avatar" class="avatar-sm d-none">
+                    <span id="avatarFallback" class="avatar-fallback d-none">U</span>
+                </span>
+                <span>Hola, <strong id="nicknameSpan">usuario</strong></span>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-outline-light btn-sm dropdown-toggle" data-bs-toggle="dropdown">Cuenta</button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="perfil.html">Mi perfil</a></li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li><a href="../index.html" class = "dropdown-item text-danger" id="btnLogout">Cerrar sesión</a></li>
+                    </ul>
+                </div>
+        </div>
+        </div>
+      </div>
     </nav>
 
 
@@ -44,33 +82,30 @@
       <aside class="col-lg-3 col-xl-2 d-none d-lg-block border-end bg-body-tertiary">
         <nav class="sidebar position-sticky sticky-top">
           <div class="p-3">
-            <h6 class="text-uppercase text-muted mb-3">Registros</h6>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Aerolínea">Registros</h6>
+            <div class="list-group list-group-flush" data-roles="Aerolínea">
+              
+              <a href="registroVuelo.html" class="list-group-item list-group-item-action">Nuevo Vuelo</a>
+              <a href="registroRutaVuelo.html" class="list-group-item list-group-item-action">Nueva Ruta de Vuelo</a>
+
+            </div><br>
+            <h6 class="text-uppercase text-muted mb-3">Consultas</h6>
             <div class="list-group list-group-flush">
-              <a href="./registroCiudad.html" class="list-group-item list-group-item-action">Registrar Ciudad</a>
-              <a href="./registroVuelo.html" class="list-group-item list-group-item-action">Registrar Vuelo</a>
-              <a href="./registroRutaVuelo.html" class="list-group-item list-group-item-action">Registrar Ruta de Vuelo</a>
-              <a href="./registroPaqRutasVuelo.html" class="list-group-item list-group-item-action">Crear Paquetes de Rutas de Vuelo</a>
-              <a href="./registroRutasVueloenPaquete.html" class="list-group-item list-group-item-action">Registrar Rutas de Vuelo en Paquete</a>
+              <a href="consultaUsuario.html" class="list-group-item list-group-item-action">Usuario</a>
+              <a href="consultaRutasVuelo.html" class="list-group-item list-group-item-action active">Ruta de Vuelo</a>
+              <a href="consultaVuelo.html" class="list-group-item list-group-item-action">Vuelo</a>
+              <a href="consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
+              <a href="consultaReservas.html" data-roles="Cliente" class="list-group-item list-group-item-action">Mis Reservas de Vuelo</a>
+              <a href="consultaReservas.html" data-roles="Aerolínea" class="list-group-item list-group-item-action">Reservas de Nuestros Vuelos</a>
+            </div><br>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Aerolínea,Cliente">Modificaciones</h6>
+            <div class="list-group list-group-flush mb-4" data-roles="Aerolínea,Cliente">
+              <a href="perfil.html" class="list-group-item list-group-item-action">Modificar mis datos</a>
             </div>
-
-            <h6 class="text-uppercase text-muted my-3">Consultas</h6>
-            <div class="list-group list-group-flush">
-
-              <a href="./consultaUsuario.html" class="list-group-item list-group-item-action">Usuario</a>
-              <a href="./consultaRutasVuelo.html" class="list-group-item list-group-item-action active">Ruta de Vuelo</a>
-              <a href="./consultaVuelo.html" class="list-group-item list-group-item-action">Vuelo</a>
-              <a href="./consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
-            </div>
-
-            <h6 class="text-uppercase text-muted my-3">Modificaciones</h6>
-            <div class="list-group list-group-flush mb-4">
-              <a href="./modificarUsuario.html" class="list-group-item list-group-item-action">Modificar Datos de Usuario</a>
-            </div>
-
-            <h6 class="text-uppercase text-muted mb-3">Reserva / Compra</h6>
-            <div class="list-group list-group-flush">
-              <a href="./reservarVuelo.html" class="list-group-item list-group-item-action">Reservar Vuelo</a>
-              <a href="./comprarPaquete.html" class="list-group-item list-group-item-action">Comprar Paquete</a>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Cliente">Reserva / Compra</h6>
+            <div class="list-group list-group-flush" data-roles="Cliente">
+              <a href="reservarVuelo.html" class="list-group-item list-group-item-action">Reservar Vuelo</a>
+              <a href="comprarPaquete.html" class="list-group-item list-group-item-action">Comprar Paquete</a>
             </div>
           </div>
         </nav>
@@ -158,10 +193,10 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Si consultaUsuario.html está en la RAÍZ -->
-<script src="../assets/js/consulta-rutavuelo.js"></script>
 
-
+  <script src="../assets/js/consulta-rutavuelo.js"></script>
+  <script src="../assets/js/auth.js"></script>
+  <script src="../assets/js/roles.js"></script>
 
 
 </body>
