--- a/volandouy oficial/src/main/webapp/front/consultaVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/consultaVuelo.html
@@ -47,8 +47,8 @@
         <div id="authArea" class="d-flex align-items-center gap-2">
         <!-- Estado: invitado -->
         <div id="guestArea" class="d-flex align-items-center gap-2">
-            <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#loginModal">Iniciar sesión</button>
-            <a class="btn btn-warning btn-sm" href="../registro.html" role="button">Registrarse</a>
+          <a class="btn btn-outline-light btn-sm" href="../login.html">Iniciar sesión</a>
+          <a class="btn btn-warning btn-sm" href="../registro.html" role="button">Registrarse</a>
         </div>
         <!-- Estado: logueado -->
         <div id="userArea" class="d-none align-items-center gap-2">
@@ -69,8 +69,8 @@
                 </div>
         </div>
         </div>
-    </div>
-  </nav>
+      </div>
+    </nav>
 
 
 
@@ -81,33 +81,30 @@
       <aside class="col-lg-3 col-xl-2 d-none d-lg-block border-end bg-body-tertiary">
         <nav class="sidebar position-sticky sticky-top">
           <div class="p-3">
-            <h6 class="text-uppercase text-muted mb-3">Registros</h6>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Aerolínea">Registros</h6>
+            <div class="list-group list-group-flush" data-roles="Aerolínea">
+              
+              <a href="registroVuelo.html" class="list-group-item list-group-item-action">Nuevo Vuelo</a>
+              <a href="registroRutaVuelo.html" class="list-group-item list-group-item-action">Nueva Ruta de Vuelo</a>
+
+            </div><br>
+            <h6 class="text-uppercase text-muted mb-3">Consultas</h6>
             <div class="list-group list-group-flush">
-              <a href="./registroCiudad.html" class="list-group-item list-group-item-action">Registrar Ciudad</a>
-              <a href="./registroVuelo.html" class="list-group-item list-group-item-action">Registrar Vuelo</a>
-              <a href="./registroRutaVuelo.html" class="list-group-item list-group-item-action">Registrar Ruta de Vuelo</a>
-              <a href="./registroPaqRutasVuelo.html" class="list-group-item list-group-item-action">Crear Paquetes de Rutas de Vuelo</a>
-              <a href="./registroRutasVueloenPaquete.html" class="list-group-item list-group-item-action">Registrar Rutas de Vuelo en Paquete</a>
+              <a href="consultaUsuario.html" class="list-group-item list-group-item-action">Usuario</a>
+              <a href="consultaRutasVuelo.html" class="list-group-item list-group-item-action">Ruta de Vuelo</a>
+              <a href="consultaVuelo.html" class="list-group-item list-group-item-action active">Vuelo</a>
+              <a href="consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
+              <a href="consultaReservas.html" data-roles="Cliente" class="list-group-item list-group-item-action">Mis Reservas de Vuelo</a>
+              <a href="consultaReservas.html" data-roles="Aerolínea" class="list-group-item list-group-item-action">Reservas de Nuestros Vuelos</a>
+            </div><br>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Aerolínea,Cliente">Modificaciones</h6>
+            <div class="list-group list-group-flush mb-4" data-roles="Aerolínea,Cliente">
+              <a href="perfil.html" class="list-group-item list-group-item-action">Modificar mis datos</a>
             </div>
-
-            <h6 class="text-uppercase text-muted my-3">Consultas</h6>
-            <div class="list-group list-group-flush">
-
-              <a href="./consultaUsuario.html" class="list-group-item list-group-item-action">Usuario</a>
-              <a href="./consultaRutasVuelo.html" class="list-group-item list-group-item-action">Ruta de Vuelo</a>
-              <a href="./consultaVuelo.html" class="list-group-item list-group-item-action active">Vuelo</a>
-              <a href="./consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
-            </div>
-
-            <h6 class="text-uppercase text-muted my-3">Modificaciones</h6>
-            <div class="list-group list-group-flush mb-4">
-              <a href="./modificarUsuario.html" class="list-group-item list-group-item-action">Modificar Datos de Usuario</a>
-            </div>
-
-            <h6 class="text-uppercase text-muted mb-3">Reserva / Compra</h6>
-            <div class="list-group list-group-flush">
-              <a href="./reservarVuelo.html" class="list-group-item list-group-item-action">Reservar Vuelo</a>
-              <a href="./comprarPaquete.html" class="list-group-item list-group-item-action">Comprar Paquete</a>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Cliente">Reserva / Compra</h6>
+            <div class="list-group list-group-flush" data-roles="Cliente">
+              <a href="reservarVuelo.html" class="list-group-item list-group-item-action">Reservar Vuelo</a>
+              <a href="comprarPaquete.html" class="list-group-item list-group-item-action">Comprar Paquete</a>
             </div>
           </div>
         </nav>
@@ -171,34 +168,9 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/consulta-vuelo.js">
-  </script><script src="../assets/js/auth.js"></script>
-
-  <div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-        <form class="modal-content" id="loginForm">
-        <div class="modal-header">
-            <h5 class="modal-title">Iniciar sesión</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body">
-            <div class="mb-3">
-            <label class="form-label">Nickname</label>
-            <input name="nickname" class="form-control" placeholder="p. ej., maria23" required>
-            </div>
-            <div class="mb-2">
-            <label class="form-label">Contraseña</label>
-            <input name="pass" type="password" class="form-control" placeholder="1235" required>
-            </div>
-            <div id="loginError" class="text-danger small d-none">Credenciales inválidas.</div>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Cancelar</button>
-            <button class="btn btn-primary" type="submit">Entrar</button>
-        </div>
-        </form>
-    </div>
-  </div>
+  <script src="../assets/js/consulta-vuelo.js"></script>
+  <script src="../assets/js/auth.js"></script>
+  <script src="../assets/js/roles.js"></script>
 
 </body>
 </html>
