--- a/volandouy oficial/src/main/webapp/front/perfil.html
+++ b/volandouy oficial/src/main/webapp/front/perfil.html
@@ -60,9 +60,13 @@
                 <nav class="sidebar position-sticky sticky-top">
                     <div class="p-3">
                         <h6 class="text-uppercase text-muted mb-3">Mi Perfil</h6>
-                        <div class="list-group list-group-flush">
-                            <a href="front/misReservas.html" class="list-group-item list-group-item-action">Reservar Vuelo</a>
-                            <a href="front/misCompras.html" class="list-group-item list-group-item-action">Comprar Paquete</a>
+                        <div class="list-group list-group-flush" data-roles="Cliente">
+                            <a href="reservarVuelo.html" data-roles="Cliente" class="list-group-item list-group-item-action">Reservar Vuelo</a>
+                            <a href="comprarPaquete.html" data-roles="Cliente" class="list-group-item list-group-item-action">Comprar Paquete</a>
+                        </div>
+                        <div class="list-group list-group-flush" data-roles="Aerolínea">
+                        <a href="registroVuelo.html" data-roles="Aerolínea" class="list-group-item list-group-item-action">Nuevo Vuelo</a>
+                            <a href="registroRutaVuelo.html" data-roles="Aerolínea" class="list-group-item list-group-item-action">Nueva Ruta</a>
                         </div>
                     </div>
                 </nav>
@@ -154,11 +158,6 @@
                             <label class="form-label">Repetir nueva contraseña</label>
                             <input type="password" class="form-control" id="pwdNew2" autocomplete="new-password">
                             </div>
-                            <div class="col-12">
-                            <div class="form-text">
-                                * En Parte 1 la contraseña se guarda como “override” local. En Parte 2 (backend) irá a la BD.
-                            </div>
-                            </div>
 
                             <div class="col-12 d-flex gap-2">
                             <button type="submit" class="btn btn-primary">Guardar</button>
@@ -178,6 +177,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/auth.js"></script>
+    <script src="../assets/js/roles.js"></script>
     <script src="../assets/js/perfil-edit.js"></script>
     <script src="../assets/js/consulta-usuario.js"></script>
 
