--- a/volandouy oficial/src/main/webapp/front/registroVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/registroVuelo.html
@@ -24,13 +24,12 @@
       <aside class="col-lg-3 col-xl-2 d-none d-lg-block border-end bg-body-tertiary">
         <nav class="sidebar position-sticky sticky-top">
           <div class="p-3">
-            <h6 class="text-uppercase text-muted mb-3">Registros</h6>
-            <div class="list-group list-group-flush">
-              <a href="registroCiudad.html" class="list-group-item list-group-item-action">Registrar Ciudad</a>
-              <a href="registroVuelo.html" class="list-group-item list-group-item-action active">Registrar Vuelo</a>
-              <a href="registroRutaVuelo.html" class="list-group-item list-group-item-action">Registrar Ruta de Vuelo</a>
-              <a href="registroPaqRutasVuelo.html" class="list-group-item list-group-item-action">Crear Paquetes de Rutas de Vuelo</a>
-              <a href="registroRutasVueloenPaquete.html" class="list-group-item list-group-item-action">Registrar Rutas de Vuelo en Paquete</a>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Aerolínea">Registros</h6>
+            <div class="list-group list-group-flush" data-roles="Aerolínea">
+              
+              <a href="registroVuelo.html" class="list-group-item list-group-item-action active">Nuevo Vuelo</a>
+              <a href="registroRutaVuelo.html" class="list-group-item list-group-item-action">Nueva Ruta de Vuelo</a>
+
             </div><br>
             <h6 class="text-uppercase text-muted mb-3">Consultas</h6>
             <div class="list-group list-group-flush">
@@ -38,13 +37,15 @@
               <a href="consultaRutasVuelo.html" class="list-group-item list-group-item-action">Ruta de Vuelo</a>
               <a href="consultaVuelo.html" class="list-group-item list-group-item-action">Vuelo</a>
               <a href="consultaPaqRutasVuelo.html" class="list-group-item list-group-item-action">Paquete de Rutas de Vuelo</a>
+              <a href="consultaReservas.html" data-roles="Cliente" class="list-group-item list-group-item-action">Mis Reservas de Vuelo</a>
+              <a href="consultaReservas.html" data-roles="Aerolínea" class="list-group-item list-group-item-action">Reservas de Nuestros Vuelos</a>
             </div><br>
-            <h6 class="text-uppercase text-muted mb-3">Modificaciones</h6>
-            <div class="list-group list-group-flush mb-4">
-              <a href="modificarUsuario.html" class="list-group-item list-group-item-action">Modificar Datos de Usuario</a>
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Aerolínea,Cliente">Modificaciones</h6>
+            <div class="list-group list-group-flush mb-4" data-roles="Aerolínea,Cliente">
+              <a href="perfil.html" class="list-group-item list-group-item-action">Modificar mis datos</a>
             </div>
-            <h6 class="text-uppercase text-muted mb-3">Reserva / Compra</h6>
-            <div class="list-group list-group-flush">
+            <h6 class="text-uppercase text-muted mb-3" data-roles="Cliente">Reserva / Compra</h6>
+            <div class="list-group list-group-flush" data-roles="Cliente">
               <a href="reservarVuelo.html" class="list-group-item list-group-item-action">Reservar Vuelo</a>
               <a href="comprarPaquete.html" class="list-group-item list-group-item-action">Comprar Paquete</a>
             </div>
@@ -110,5 +111,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/auth.js"></script>
+    <script src="../assets/js/roles.js"></script>
 </body>
 </html>
