Campos en registro Ruta Vuelo faltante

--- a/volandouy oficial/src/main/webapp/front/reservarVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/reservarVuelo.html
@@ -110,7 +110,7 @@
         </nav>
       </aside>
 
-      <!-- CONTENIDO (container interno para centrar/limitar ancho) -->
+      <!-- CONTENIDO  -->
       <main>
         
       </main>
