--- a/volandouy oficial/src/main/webapp/front/registroRutaVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/registroRutaVuelo.html
@@ -64,8 +64,24 @@
                         <input type="text" class="form-control" id="descCorta" required placeholder=" Ej: Ruta directa Montevideo - Buenos Aires">
                     </div>
                     <div class="mb-3">
+                        <label for="descLarga" class="form-label">Descripción</label>
+                        <textarea class="form-control" id="descLarga" rows="3" required placeholder=" Ej: Esta ruta conecta las ciudades de Montevideo y Buenos Aires con vuelos directos diarios operados por nuestra aerolínea."></textarea>
+                    </div>
+                    <div class="mb-3">
                         <label for="hora" class="form-label">Hora de Salida</label>
                         <input type="time" class="form-control" id="hora" required>
+                    </div>
+                    <div>
+                        <label for="costoTurista" class="form-label">Costo por Pasajero - Turista (USD)</label>
+                        <input type="number" class="form-control" id="costoTurista" min="0" step="0.01" required>
+                    </div>
+                    <div>   
+                        <label for="costoEjecutivo" class="form-label">Costo por Pasajero - Ejecutivo (USD)</label>
+                        <input type="number" class="form-control" id="costoEjecutivo" min="0" step="0.01" required>
+                    </div>
+                    <div>
+                        <label for="costoEquipajeExtra" class="form-label">Costo por Pasajero - Equipaje Extra (USD)</label>
+                        <input type="number" class="form-control" id="costoEquipajeExtra" min="0" step="0.01" required>
                     </div>
                     <div class="mb-3">
                         <label for="ciudadOrigen" class="form-label">Ciudad de Origen</label>
@@ -87,7 +103,7 @@
                         <label for="imagen" class="form-label">Imagen Opcional (URL)</label>
                         <input type="url" class="form-control" id="imagen" placeholder="https://ejemplo.com/mi-imagen.jpg">
                     </div>
-                    <button type="submit" class="btn btn-primary">Registrar Ruta de Vuelo</button>
+                    <button type="submit" class="btn btn-primary" >Registrar Ruta de Vuelo</button>
                     <a href="../home.html" class="btn btn-secondary">Cancelar</a>
                 </form>
         </main>
