--- a/volandouy oficial/src/main/webapp/front/consultaPaqRutasVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/consultaPaqRutasVuelo.html
@@ -3,32 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Consulta de Usuario - Volando.uy</title>
+  <title>Consulta de Paquetes de Rutas de Vuelo - Volando.uy</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome para iconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Tu CSS -->
   <link href="../assets/css/styles.css" rel="stylesheet">
 
-
-  <style>
-    /* --- Ajustes rápidos para navbar fija + sidebar tipo docs --- */
-    body { padding-top: 56px; } /* alto aprox navbar fixed-top */
-    .sidebar{
-      top: 56px;                 /* que no quede debajo de la navbar */
-      max-height: calc(100vh - 56px);
-      overflow: auto;
-    }
-    .list-group-item.active {
-      background-color: #0d6efd;
-      border-color: #0d6efd;
-      color: #fff;
-    }
-  </style>
 </head>
 
 
-<body class="consultaUsuario-page">
+<body class="consultaPaqRutasVuelo-page">
   <!-- NAVBAR -->
     <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
         <div class="container">
@@ -111,8 +98,93 @@
       </aside>
 
       <!-- CONTENIDO (container interno para centrar/limitar ancho) -->
-      <main>
-        
+      <main class="col-12 col-lg-9 col-xl-10 py-4">
+        <div class="container-fluid">
+          
+          <!-- VISTA DE LISTA -->
+          <div id="listView">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+              <div>
+                <h1 class="h2 mb-1">Paquetes de Rutas de Vuelo</h1>
+                <p class="text-muted">Selecciona un paquete para ver sus detalles completos</p>
+              </div>
+            </div>
+
+            <!-- Barra de información y búsqueda -->
+            <div class="row mb-4">
+              <div class="col-md-8">
+                <div class="alert alert-info" role="alert">
+                  <i class="fas fa-info-circle me-2"></i>
+                  <span id="paquetesCount">Cargando paquetes...</span>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-search"></i></span>
+                  <input type="text" class="form-control" id="searchPaquetes" placeholder="Buscar paquetes...">
+                </div>
+              </div>
+            </div>
+
+            <!-- Lista de paquetes -->
+            <div class="row" id="paquetesList">
+              <!-- Los paquetes se cargarán aquí dinámicamente -->
+              <div class="col-12 text-center py-5">
+                <div class="spinner-border text-primary" role="status">
+                  <span class="visually-hidden">Cargando...</span>
+                </div>
+                <p class="text-muted mt-2">Cargando paquetes de rutas de vuelo...</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- VISTA DE DETALLES -->
+          <div id="detailView" style="display: none;">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+              <div>
+                <h1 class="h2 mb-1" id="detailTitle">Detalles del Paquete</h1>
+                <p class="text-muted">Información completa del paquete seleccionado</p>
+              </div>
+              <button class="btn btn-outline-secondary" onclick="volverALista()">
+                <i class="fas fa-arrow-left me-2"></i>Volver a la lista
+              </button>
+            </div>
+
+            <!-- Información básica del paquete -->
+            <div class="card mb-4">
+              <div class="card-header">
+                <h5 class="mb-0"><i class="fas fa-info-circle me-2"></i>Información del Paquete</h5>
+              </div>
+              <div class="card-body" id="detailInfo">
+                <!-- La información se cargará aquí dinámicamente -->
+              </div>
+            </div>
+
+            <!-- Rutas de vuelo incluidas -->
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0"><i class="fas fa-route me-2"></i>Rutas de Vuelo Incluidas</h5>
+              </div>
+              <div class="card-body">
+                <p class="text-muted mb-3">Tipos y cantidades de rutas de vuelo que integran este paquete:</p>
+                <div class="row" id="rutasVueloList">
+                  <!-- Las rutas se cargarán aquí dinámicamente -->
+                </div>
+              </div>
+            </div>
+
+            <!-- Acciones adicionales -->
+            <div class="mt-4 text-center">
+              <button class="btn btn-success btn-lg me-3" data-roles="Cliente">
+                <i class="fas fa-shopping-cart me-2"></i>Comprar Paquete
+              </button>
+              <button class="btn btn-outline-primary" onclick="volverALista()">
+                <i class="fas fa-list me-2"></i>Ver Otros Paquetes
+              </button>
+            </div>
+          </div>
+
+        </div>
       </main>
     </div>
   </div>
@@ -131,6 +203,7 @@
   <script src="../assets/js/consulta-usuario.js"></script>
   <script src="../assets/js/auth.js"></script>
   <script src="../assets/js/roles.js"></script>
+  <script src="../assets/js/consulta-paquetes.js"></script>
 
 </body>
 </html>
