--- a/volandouy oficial/src/main/webapp/front/consultaRutasVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/consultaRutasVuelo.html
@@ -181,7 +181,10 @@
             </div>
           </div>
         </div>
-
+      </div>
+      </main>
+    </div>
+  </div>
 
   <!-- FOOTER -->
   <footer class="mt-auto py-3 bg-transparent">
