--- a/volandouy oficial/src/main/webapp/front/perfil.html
+++ b/volandouy oficial/src/main/webapp/front/perfil.html
@@ -169,6 +169,8 @@
                     </section>
                 </div>
             </main>
+        </div>
+    </div>
         <!-- FOOTER -->
     <footer class="mt-auto py-3 bg-transparent">
     <div class="container text-center">
