--- a/volandouy oficial/src/main/webapp/home.html
+++ b/volandouy oficial/src/main/webapp/home.html
@@ -98,11 +98,11 @@
         <div class="container">
           <h1>Bienvenid@ a Volando.uy</h1>
 
-          <!--imagen de volando en la izquierda -->
+          <!--imagen de volando en la izquierda 
           <div class="text-center">
             <img src="assets/img/ChatGPT Image 24 sept 2025, 10_28_06 a.m..png" alt="Avión volando" class="img-fluid my-4" style="max-height: 120px;">
           </div>
-
+          -->
           <section class="mt-4">
           
 
@@ -172,10 +172,8 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </section>
-
         </div>
       </main>
     </div>
